# lightblue_automsg

./: Cargo.toml  build.rs  readme.md
lightblue_macro/: Cargo.toml
lightblue_macro/src/: lib.rs
src/: inputs.rs  main.rs
src/messages/: bar.rs  foo.rs  mod.rs
src/player/: mod.rs  net.rs
